[package]
name = "rust-wasm-upwork"
version = "0.1.0"
authors = ["Ronan <ronan@example.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
serde_json = "1.0.61"
serde = { version = "1.0.120", features = ["derive"] }
